Acknowledgements. Still need funding info

--- a/latex/siggraph2013/binary.tex
+++ b/latex/siggraph2013/binary.tex
@@ -41,8 +41,8 @@ Figure~\ref{fig:binaryHistograms} shows predicted distributions over relative li
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
-{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/foregroundAdjacency}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundAdjacencyHistogram}\vspace{0.5em}\\
-{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/foregroundBackgroundAdjacency}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundBackgroundAdjacencyHistogram}\vspace{0.5em}\\
+{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/ff}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundAdjacencyHistogram2}\vspace{0.5em}\\
+{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/fb}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundBackgroundAdjacencyHistogram2}\vspace{0.5em}\\
 \end{tabular}
 
 \caption{Predicted distributions over relative lightness for two different segment adjacencies (participating segments higlighted in orange and green). A value of 0 indicates identical lightness. The foreground-foreground distribution permits more similar lightness values than the foreground-background disribution.}
