--- a/latex/siggraph2013/unary.tex
+++ b/latex/siggraph2013/unary.tex
@@ -55,8 +55,8 @@ Figure~\ref{fig:unaryHistograms} shows predicted distributions over lightness fo
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
-{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/backgroundGroup}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/backgroundGroupHistogram}\vspace{0.5em}\\
-{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/foregroundGroup}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundGroupHistogram}\vspace{0.5em}\\
+{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/b}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/backgroundGroupHistogram2}\vspace{0.5em}\\
+{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/f}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundGroupHistogram2}\vspace{0.5em}\\
 \end{tabular}
 
 \caption{Predicted distributions over lightness for two different pattern color groups (higlighted in orange). The background has a bimodal distribution, whereas the foreground strictly favors lighter colors.}
