--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -1,11 +1,11 @@
 \section{Approach}
 \label{sec:approach}
 
-We seek to facilitate the creative coloring process by automatically suggesting pattern coloring suggestions. In doing so, we must keep in mind that users of a color suggestion system may or may not have a target coloring style in mind. In addition, aesthetic taste varies across users and can depend on the situation. Thus, an effective color support system should both output a variety of appealing colorings as well as provide controls for personalizing suggestions to a preferred coloring style.
+We seek to facilitate the creative coloring process by automatically suggesting pattern colorings. In doing so, we must keep in mind that users may or may not have a target coloring style in mind. In addition, aesthetic taste varies across users and can depend on the situation. Thus, an effective color support system should both output a variety of appealing colorings as well as provide controls for personalizing suggestions to a preferred coloring style.
 
-This system should take as input a pattern template and output suggested colorings for that pattern template. A pattern template specifies which segments in an image can be colored in and which segments must map to the same color. For example, an image of a flower on a background may have a template that specifies all petals of the flower must be the same color, and all background segments must be the same color. We refer to the set of segments that map to the same color as a \emph{color group}. Figure~\ref{fig:teaser} shows an example of a pattern template visualized in grayscale, where each lightness level identifies a different color group. This template representation is relatively easy to author from images composed of segments, such as web designs, 3D renderings, and line drawings.
+Our system takes as input a pattern template and outputs suggested colorings for that template. A pattern template specifies which \emph{segments}, or connected components, in an image can be colored in and which segments must map to the same color. For example, an image of a flower on a background may have a template that specifies all petals of the flower must be the same color, and all background segments must be the same color. We refer to the set of segments that map to the same color as a \emph{color group}. Figure~\ref{fig:teaser} shows an example of a pattern template visualized in grayscale, where each lightness level identifies a different color group. This template representation is relatively easy to author from images composed of segments, such as web designs, 3D renderings, and line drawings.
 
-To generate attractive pattern colorings, a reasonable first step is to enforce that colors are by some definition `compatible' with one another. Figure~\ref{fig:ColorCompatOnly} shows several patterns whose colors receive a high score under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. While these high-scoring colorings use attractive colors and exhibit a great degree of diversity, they also display several problems. Some background regions that are oversaturated, coming across as too `loud.' Several foreground regions have insufficient contrast with the pattern background, causing them to blend into the background and become invisible or visually jarring.
+To generate attractive pattern colorings, a reasonable first step is to enforce that colors are by some definition `compatible' with one another. Figure~\ref{fig:ColorCompatOnly} shows several patterns whose colors receive a high score under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. While these high-scoring colorings use attractive colors and exhibit a great degree of diversity, they also display several problems. Some background regions may be oversaturated, coming across as too `loud.' Several foreground regions have insufficient contrast with the pattern background, causing them to blend into the background and become invisible or visually jarring.
 
 \begin{figure}[htb]
 \centering
