--- a/latex/siggraph2013/introduction.tex
+++ b/latex/siggraph2013/introduction.tex
@@ -9,19 +9,19 @@ A colored pattern has two parts: a \emph{pattern template}, which is a creative 
 Additionally, pattern templates often define constraints on which regions must be assigned the same color: childrens' color-by-numbers exercises and the patterns shared on the popular COLOURlovers\footnote{http://www.colourlovers.com/} website are two such examples. It is this color-by-numbers pattern format that we explore in this paper.
 
 %% Motivation
-While many people can easily distinguish patterns that they find pleasing from those they do not, \emph{creating} attractive pattern colorings takes much more time and effort. Because perceived color appearance depends strongly on spatial arrangement, it is difficult for both experienced artists and enthusiasts to anticipate how a specific coloring will appear. Thus, the coloring process involves much trial-and-error color tweaking. Experienced artists often create quick thumbnail colorings to explore the state space before diving into their final work, or use reference images for inspiration~\cite{ColorPaletteTools}.
+While many people can easily distinguish patterns they find pleasing from those they do not, \emph{creating} attractive pattern colorings takes much more time and effort. Because perceived color appearance depends strongly on spatial arrangement, it can be difficult for both experienced artists and enthusiasts to anticipate how a specific coloring will appear. Thus, the coloring process involves much trial-and-error color tweaking. Experienced artists often create quick thumbnail colorings to explore the state space before diving into their final work, or use reference images for inspiration~\cite{ColorPaletteTools}.
 
 %% Goals - criteria for a computational tool
 %Despite these challenges, few computational tools exist for assisting with the pattern coloring process.
 Can computation make this process easier for artists of all levels by automatically suggesting colorings? To be an effective creative support tool, a coloring suggestion system should adapt to different usage scenarios. First, it should output diverse suggestions automatically for uncertain users who want to explore the space of good colorings. Second, it should accomodate users with different aesthetic preferences by customizing suggestions to evoke a particular desired style. Finally, it should expose controls to let users refine their criteria and guide the suggestion process. 
 
 %% Challenges
-Building such a system requires a computational encoding of the properties that make a coloring desirable. There are many principles of aesthetics that might be relevant, such as any of the many different color harmony rules~\cite{ColorHarmonyBook}. But which of these principles apply to which patterns and coloring styles? For those that do apply, which are the most important? Even assuming an answer to these questions, there is still the problem of how to actually \emph{generate} many, diverse new colorings that satisfy the desired properties.
+Building such a system requires a computational encoding of the properties that make a coloring desirable. There are many principles of aesthetics that might be relevant, such as the different color harmony rules~\cite{ColorHarmonyBook}. However, which of these principles apply to which patterns and coloring styles? For those that do apply, which are the most important? Even assuming an answer to these questions, there is still the problem of how to actually \emph{generate} many, diverse new colorings that satisfy the desired properties.
 
 %% Our approach
 In this paper, we present a probabilistic approach to automatic pattern colorization using factor graphs. A factor graph is a class of probabilistic graphical model well-suited to encoding complex distributions over multiple random variables. This formalism has been succesfully applied in the graphics literature to synthesize pattern tilings~\cite{YiTingTiledPatterns}, generate object layouts~\cite{YiTingLARJ}, and assign materials to 3D objects~\cite{MaterialMemex}.
 
-Our main contribution is a probabilistic factor graph model that can be trained on example patterns and sampled to generate new colorings for a target pattern template. Our model incorporate functions to enforce plausible spatial arrangements of colors as well as overall color compatibility. The individual functions, as well as the relative importance of each one, are automatically trained using machine learning techniques, statistically capturing the desirable properties of the example patterns. Using Markov Chain Monte Carlo sampling, our model can generate a wide variety of attractive colorings. And, via the use of conditional probabilistic inference or the addition of simple constraint factors, users can exercise control over the generated suggestions.
+Our main contribution is a probabilistic factor graph model that can be trained on example patterns and sampled to generate new colorings for a target pattern template. Our model incorporate functions to enforce plausible spatial arrangements of colors as well as overall color compatibility. The individual functions, as well as the relative importance of each one, are automatically trained using machine learning techniques, statistically capturing desirable properties of the example patterns. Using Markov Chain Monte Carlo sampling, our model can generate a wide variety of attractive colorings. In addition, via the use of conditional probabilistic inference or the addition of simple constraint factors, users can exercise control over the generated suggestions.
 
 %% Summary of results
 We demonstrate the effectiveness of our model for a variety of pattern coloring scenarios. We also show real-world applications of our automatic coloring system to 3D scene design, web design, and fashion. Finally, we evaluate the quality of colorings generated by our model through a judgment study. Automatically-colored patterns were significantly preferred to both random colorings and colorings that respect only global color compatibility.
