--- a/latex/siggraph2013/background.tex
+++ b/latex/siggraph2013/background.tex
@@ -7,15 +7,15 @@ Related work has tackled problems similar to the one we address in this paper. W
 \paragraph{Creative color support tools}
 Addressing a problem similar to ours, Sauvaget and colleagues describe a system that takes an image divided into segments and a set of colors and computes a `harmonious' assignment of colors to segments based on contrast of proportions guidelines ~\shortcite{ColorizationUsingHarmony}. The system selects colors from a fixed palette, and users can specify the set of colors to be used and their relative amounts. However, these requirements can conflict with our goal of supporting exploratory coloring, in which the user may not know in advance the colors she wants and would like to see many plausible suggestions. In contrast, our model is trained from artist-created images. It does not require the user to specify colors in advance, but its probabilistic framework is general enough to support this input if the user desires it.
 
-In the theme of user exploration, Meier et al. develop a suite of interactive interfaces to help users browse color themes and experiment with compositions~\shortcite{ColorPaletteTools}. However, they do not focus on algorithms for generating coloring suggestions. In this paper, we explore generating coloring suggestions while taking into account user input.
+In the theme of user exploration, Meier and colleagues develop a suite of interactive interfaces to help users browse color themes and experiment with compositions~\shortcite{ColorPaletteTools}. However, they do not focus on algorithms for generating coloring suggestions. In this paper, we explore generating coloring suggestions while taking into account user input.
 
 \paragraph{Color harmony \& compatibility}
-Computer graphics, aesthetics, and psychology research has introduced theories and models to explain and predict the compatibility of two or more colors~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference,Itten}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}.
+Computer graphics, aesthetics, and psychology research has introduced theories and models to predict the compatibility of two or more colors~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference,Itten}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}.
 %This model is highly generalizable, and they demonstrate a variety of applications for it, including improving existing themes and suggesting colors to complete a partial theme.
 Our model includes this compatibility function. However, as we demonstrate in Section~\ref{sec:approach}, this term alone is insufficient to produce good colorings, as it does not take into account the spatial role each color plays in the pattern. Thus, our model also uses the distinguishing features of each pattern region and the relationships between regions to constrain the space of colorings that it will suggest.
 
 \paragraph{Natural image colorization}
-While there is little work directly addressing pattern colorization, researchers have developed many approaches to colorizing grayscale photographic images~\cite{ScribbleColorization,TransferColorization}. The most automatic of these methods builds distributions of color variability given local texture descriptors, combines them into one energy function, and minimizes it using a graph cut algorithm~\cite{MultimodalColorization}. Our model employs similar local color distributions but bases them on features of pattern regions, rather than photographic texture patches. We also cast the problem of finding good colorizations as one of probabilistic inference, rather than optimization. This framing allows our algorithm to explore the space of colorings and suggest multiple good alternatives, whereas a graph cut yields only a single global optimum.
+Related to the pattern colorization problem, researchers have developed many approaches to colorizing grayscale photographic images~\cite{ScribbleColorization,TransferColorization}. The most automatic of these methods builds distributions of color variability given local texture descriptors, combines them into one energy function, and minimizes it using a graph cut algorithm~\cite{MultimodalColorization}. Our model employs similar local color distributions but bases them on features of pattern regions, rather than photographic texture patches. We also cast the problem of finding good colorizations as one of probabilistic inference, rather than optimization. This framing allows our algorithm to explore the space of colorings and suggest multiple good alternatives, whereas a graph cut yields only a single global optimum.
 
 \paragraph{3D model colorization}
 Other recent work has tackled automatic coloring of 3D objects. The DressUp! system suggests plausible outfits---including colors for each clothing item---for virtual characters~\cite{DressUp}. It also employs the color compatibility function of O'Donovan et al.~\shortcite{ODonovan} as part of a probabilistic model, but it does not consider the spatiality of color beyond a top-to-bottom ordering. The Material Memex system models the context-dependent correlation between geometric shape and material properties of 3D object parts~\cite{MaterialMemex}. In a related fashion, the system presented in this paper models the context-dependent correlation between pattern regions and color properties of those regions. The Material Memex does not include any explicit consideration of color compatibility. Additionally, its use of multinomial factors requires a quantization of material configuration space. Since it does not consider colors separately from materials, this quantization can restrict the set of colors the model can possibly suggest. In contrast, our model uses continuous probability distributions.
