--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -116,7 +116,7 @@ Figure~\ref{fig:nearbySuggestions} shows two example scenarios where a proposed 
 \begin{figure}[t!]
 \begin{tabular}{ccc} 
 Style&Example&Results\\ %\hline
-\raisebox{1.55em}{\emph{Light}}&\includegraphics[width=.148\columnwidth]{figs/styleResultsLightExample}&\includegraphics[width=.62\columnwidth]{figs/styleResultsLight}\vspace{0.5em}\\
+\raisebox{1.55em}{\emph{Light}}&\includegraphics[width=.148\columnwidth]{figs/styleResultsLightExample2}&\includegraphics[width=.62\columnwidth]{figs/styleResultsLight}\vspace{0.5em}\\
 \raisebox{1.55em}{\emph{Dark}}&\includegraphics[width=.148\columnwidth]{figs/styleResultsDarkExample}&\includegraphics[width=.62\columnwidth]{figs/styleResultsDark}\vspace{0.5em}\\
 \raisebox{1.55em}{\emph{Bold}}&\includegraphics[width=.148\columnwidth]{figs/styleResultsBoldExample}&\includegraphics[width=.62\columnwidth]{figs/styleResultsBold}\vspace{0.5em}\\
 \raisebox{1.55em}{\emph{Mellow}}&\includegraphics[width=.148\columnwidth]{figs/styleResultsMellowExample}&\includegraphics[width=.62\columnwidth]{figs/styleResultsMellow}\vspace{0.5em}\\
@@ -130,8 +130,8 @@ Style&Example&Results\\ %\hline
 \begin{figure*}[ht]
 \centering
 \begin{tabular}{cc} 
-\includegraphics[width=.44\linewidth]{figs/styleSugarExamples}&\includegraphics[width=.44\linewidth]{figs/styleAlbenajExamples}\vspace{1.0em}\\
-\includegraphics[width=.44\linewidth]{figs/styleSugar}&\includegraphics[width=.44\linewidth]{figs/styleAlbenaj}\\
+\includegraphics[width=.44\linewidth]{figs/styleSugarExamples2}&\includegraphics[width=.44\linewidth]{figs/styleAlbenajExamples2}\vspace{1.0em}\\
+\includegraphics[width=.44\linewidth]{figs/styleSugar2}&\includegraphics[width=.44\linewidth]{figs/styleAlbenaj2}\\
 Artist A&Artist B\\
 \end{tabular}
 
